# aula-lwk

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
